# docutouch

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: npm-publish.yml  release.yml
codex-apply-patch/: Cargo.toml  DOCUTOUCH_ENHANCEMENTS.md  LOCAL_DIVERGENCES.md  README.md  UPSTREAM_BASELINE.md  UPSTREAM_LINEAGE.md  apply_patch_tool_instructions.md
codex-apply-patch/src/: chunk_matching.rs  lib.rs  lib_tests.rs  mutation_support.rs  parser.rs
codex-apply-patch/tests/fixtures/scenarios/023_empty_add_file/: patch.txt
codex-apply-patch/tests/fixtures/scenarios/024_update_file_preserves_crlf/: line-endings.txt  patch.txt
codex-apply-patch/tests/fixtures/scenarios/025_update_file_preserves_local_mixed_newline/: line-endings.txt  patch.txt
codex-apply-patch/tests/fixtures/scenarios/025_update_file_preserves_local_mixed_newline/expected/: mixed.txt
codex-apply-patch/tests/suite/: cli.rs  scenarios.rs  tool.rs
docs/: README.md  make.bat
docs/List-directory/: literal-extension-filter-design.md
docs/archive2026年3月24日/: README.md  apply_patch_diagnostics_spec.md  apply_patch_semantics_plan.md  apply_splice_spec.md  cli_adapter_spec.md  diagnostics_polish_spec.md  maintainer_guide.md  product_positioning.md  read_file_sampled_view_spec.md  roadmap.md  search_text_design.md  search_text_ux_contract.md  ux_hardening_plan.md
docs/archive2026年3月24日/temporary/: apply_patch_anchor_semantics_investigation.md  apply_patch_confirmed_gaps_20260323.md  apply_patch_contract_repair_execution_plan.md  apply_splice_implementation_plan.md  (+12 more)
docs/guide/: README.md  apply-patch-and-apply-splice.md  cli.md  mcp-server.md  overview.md  quickstart.md  tool-surfaces.md  upstream-lineage.md
docs/plan/: `search_text` 最终版设计提案.md
docs/source/: README.md  authoring_contract.md  conf.py  index.md  references.bib  语义分面与本体映射检索谱系.md
docs/temporary/: DocuTouch `list_directory` 测试工程报告.md  关于行号定位不应该消费不动行.md
docutouch-core/: Cargo.toml  README.md
docutouch-core/src/: fs_tools.rs  lib.rs  line_boundary.rs  patch_presentation.rs  patch_runtime.rs  path_display.rs  presentation_shared.rs  rewrite_presentation.rs  rewrite_program.rs  rewrite_runtime.rs  search_text.rs  splice_presentation.rs  splice_program.rs  splice_runtime.rs  splice_selection.rs  structural_search.rs
docutouch-core/tests/: fs_tools.rs  rewrite_parser.rs  rewrite_runtime.rs  splice_parser_selection.rs  splice_runtime.rs  splice_selection_resolution.rs  structural_search.rs
docutouch-server/: Cargo.toml  README.md
docutouch-server/src/: cli.rs  main.rs  patch_adapter.rs  pueue.rs  pueue_log_clean.rs  rewrite_adapter.rs  server.rs  splice_adapter.rs  tool_service.rs  transport_shell.rs
docutouch-server/tests/: cli_smoke.rs  pueue_log_clean.rs  stdio_smoke.rs
docutouch-server/tests/support/: mod.rs
docutouch-server/tool_docs/: Search_text.md  apply_patch.md  apply_patch_v1.md  apply_patch_v2.md  apply_patch_v3.md  apply_rewrite.md  apply_splice.md  apply_splice_撰写纪律与证明过程.md  read_files.md  structural_search.md  撰写纪律与证明过程-a.md  撰写纪律与证明过程-b.md
example/: 1.py  README.md  mcp协议-打印工具描述.py
npm/: README.md  package.json
script/: README.md  cli_demo.py  mcp_proxy_server.py
(+213 files in other folders)
