[package]
name = "codex-apply-patch"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Vendored upstream-derived apply_patch engine used by DocuTouch"
readme = "README.md"

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
similar = "2.7"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[dev-dependencies]
assert_cmd = "2.0"
assert_matches = "1.5"
pretty_assertions = "1.4"
tempfile = "3.15"
