[package]
name = "docutouch-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
codex-apply-patch = { path = "../codex-apply-patch" }
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
