[package]
name = "docutouch-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared filesystem, search, and patch outcome primitives for DocuTouch"
readme = "README.md"

[dependencies]
codex-apply-patch = { path = "../codex-apply-patch" }
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
