[package]
name = "docutouch-server"
version = "0.1.5"
edition.workspace = true
license.workspace = true
description = "MCP server and CLI adapter for DocuTouch"
readme = "README.md"

[[bin]]
name = "docutouch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
docutouch-core = { path = "../docutouch-core" }
indoc = "2.0.7"
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex = "1.3.0"
tokio.workspace = true
unicode-width = "0.2.2"
vt100 = "0.16.2"

[dev-dependencies]
tempfile.workspace = true
